; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_rc_ra.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/amd29k/extr_amd29k.c_decode_rc_ra.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AMD29K_TYPE_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @decode_rc_ra to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @decode_rc_ra(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 1
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @AMD29K_TYPE_REG, align 4
  %10 = call i32 @AMD29K_SET_VALUE(i32* %5, i32 0, i32 %8, i32 %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = getelementptr inbounds i32, i32* %12, i64 2
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @AMD29K_TYPE_REG, align 4
  %16 = call i32 @AMD29K_SET_VALUE(i32* %11, i32 1, i32 %14, i32 %15)
  %17 = load i32*, i32** %3, align 8
  %18 = call i32 @AMD29K_SET_INVALID(i32* %17, i32 2)
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @AMD29K_SET_INVALID(i32* %19, i32 3)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @AMD29K_SET_INVALID(i32* %21, i32 4)
  %23 = load i32*, i32** %3, align 8
  %24 = call i32 @AMD29K_SET_INVALID(i32* %23, i32 5)
  ret void
}

declare dso_local i32 @AMD29K_SET_VALUE(i32*, i32, i32, i32) #1

declare dso_local i32 @AMD29K_SET_INVALID(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
